--- a/source/_posts/软件——工作环境搭建.md
+++ b/source/_posts/软件——工作环境搭建.md
@@ -1,5 +1,5 @@
 ---
-title: 配置Vim和Zsh
+title: 快速搭建工作环境
 date: 2023-08-10 19:11:42
 tags:
 ---
@@ -8,7 +8,48 @@ tags:
 
 <!-- more -->
 
-## 下载Vim
+## ssh远程
+
+```bash
+ssh-keygen
+cat cat .ssh/id_rsa.pub
+
+# 在服务器
+echo "<pub>" >> .ssh/authorized_keys
+
+# 在客户端
+ssh <user-name>@<host-ip>
+```
+
+## zsh
+
+```bash
+
+brew install zsh
+sudo apt-get install zsh
+chsh -s /bin/zsh
+sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+# sh -c "$(wget https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh -O -)"
+
+# 主题
+git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k
+# ZSH_THEME="powerlevel10k/powerlevel10k"
+
+# 自动补全
+git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
+# plugins=(
+#     # other plugins...
+#     zsh-autosuggestions  # 插件之间使用空格隔开
+# )
+
+# 语法
+git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
+
+# 使配置生效
+source ~/.zshrc
+```
+
+## 配置Vim
 
 在～下新建`.vimrc`文件
 ```bash
@@ -189,3 +230,6 @@ git clone https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim
 vim +PluginInstall +qall
 ```
 
+## Mac配置iTerm2
+
+参考[iTerm2安装配置使用指南——保姆级](https://zhuanlan.zhihu.com/p/550022490)
