--- a/source/_posts/前端——如何将博客部署到云服务器和个人域名上.md
+++ b/source/_posts/前端——如何将博客部署到云服务器和个人域名上.md
@@ -1,5 +1,5 @@
 ---
-title: 如何将博客部署到云服务器和个人域名上
+title: hexo部署博客并上传到域名上
 date: 2019-06-29 09:07:19
 tags: 
     - hexo
@@ -9,23 +9,84 @@ categories:
     - 前端
 ---
 
+文章转载来自[使用 Hexo + Github 搭建自己的博客（图文教程）](https://blog.csdn.net/qq_40147863/article/details/84942914)  
+替换主题参考[Hexo 安装和替换主题、自定义博客主题](https://blog.csdn.net/qq_40147863/article/details/84946894)
 由于github部署的博客连接较慢，因此在购买腾讯云服务器之后将博客内容部署到腾讯云上，特此记录一下过程。
 
 <!-- more -->
 
+- [搭建过程](#搭建过程)
+  - [安装git node.js](#安装git-nodejs)
+  - [新建仓库](#新建仓库)
+  - [安装Hexo](#安装hexo)
+  - [修改`_config.yml`](#修改_configyml)
+  - [建立ssh密钥](#建立ssh密钥)
+  - [维护过程](#维护过程)
 - [云服务器部署](#云服务器部署)
   - [创建git用户和仓库](#创建git用户和仓库)
   - [使用nginx反向代理](#使用nginx反向代理)
   - [开放云服务器端口](#开放云服务器端口)
-- [设置Hexo仓库](#设置hexo仓库)
-- [配置域名解析](#配置域名解析)
-- [域名备案](#域名备案)
+  - [设置Hexo仓库](#设置hexo仓库)
+  - [配置域名解析](#配置域名解析)
+  - [域名备案](#域名备案)
 
+## 搭建过程
 
-## 云服务器部署  
+### 安装git node.js
+
+查看版本命令用  
+
+```bash
+npm -v
+node -v
+```
+
+### 新建仓库
+
+新建一个repository，名称为 `name.github.io`
+
+### 安装Hexo
+
+``` bash
+npm install hexo -g
+hexo -v
+hexo init
+npm install
+hexo g
+hexo s  #查看本地新建的hexo
+npm install hexo-deployer-git --save
+```
+
+### 修改`_config.yml`
+
+``` yml
+deploy:
+  type: git
+  repository: git@github.com:sjl3110/sjl3110.github.io.git
+  branch: master
+
+```
+
+### 建立ssh密钥
+
+``` bash
+ssh-keygen -t rsa -C "mail@xx.com"
+```
+
+并将默认保存位置的`id_rsa.pub`内容存放到github网站中的SSH密钥中。
+
+### 维护过程
+
+``` bash
+hexo new post "blog-name"
+hexo d -g
+```
+
+## 云服务器部署
+
 服务器安装CentOS 7操作系统，首先安装Nodejs和git：  
   
-```
+```bash
 yum install nodejs
 yum install git
 ```
@@ -63,22 +124,22 @@ chmod +x post-receive # 添加可执行权限
 exit # 返回到root用户
 chown -R git:git /home/git/repos/blog.git # 给git用户添加权限
 ```
-  
-  
+
 ### 使用nginx反向代理  
   
-安装nginx及使用：  
-```
+安装nginx及使用：
+
+```bash
 yum install nginx
 nginx -s reload  #重载配置文件
 nginx -s stop
 sudo service nginx restart
 systemctl enable nginx.service  #设置开机自启动
 ```
-  
 
-配置nginx，修改/etc/nginx/nginx.conf：  
-```C
+配置nginx，修改/etc/nginx/nginx.conf：
+
+```json
 user root;         //用户
 ...
 server {
@@ -102,34 +163,36 @@ server {
         }
     }
 ```
-  
 
 保存后重新部署。在公网中尝试连接，一般来说是失败。  
-  
+
 ### 开放云服务器端口
+
 因为腾讯云服务器并没有开放端口无法外部ping通，因此需要在“安全规则中”开放端口，如下所示：  
   
-![](/img/post_pics/Front/front1.png)
+![fig1](/img/post_pics/Front/front1.png)
 
-## 设置Hexo仓库  
-```
+### 设置Hexo仓库
+
+```json
 deploy:
     type: git
     repo: git@server_ip:/home/git/repos/blog.git    
     branch: master
 ```
-  
-  
-提交更新：  
-``` 
+
+提交更新：
+
+```bash
 hexo d -g
 ```
-  
-  
-## 配置域名解析
+
+### 配置域名解析
+
 例如aliyun的域名解析设置如下：  
   
-![](/img/post_pics/Front/front2.png)
-  
-## 域名备案
-各类云服务器在绑定域名时都需要备案，否则无法使用，例如我用的阿里云域名和腾讯云服务器，就需要在腾讯云中登记公网ip绑定的域名。  
+![fig2](/img/post_pics/Front/front2.png)
+
+### 域名备案
+
+各类云服务器在绑定域名时都需要备案，否则无法使用，例如我用的阿里云域名和腾讯云服务器，就需要在腾讯云中登记公网ip绑定的域名。
