--- a/source/_posts/嵌入式——AM5728内存配置.md
+++ b/source/_posts/嵌入式——AM5728内存配置.md
@@ -13,11 +13,13 @@ categories:
 <!-- more -->
 
 推断是由于我们的硬件更改导致的内存加载出错，研究TI给出的《AM572x Technical Reference Manual》，需要配置相关的寄存器。
+
 - [硬件更改](#硬件更改)
 - [寄存器详解](#寄存器详解)
 - [U-BOOT配置寄存器](#u-boot配置寄存器)
   
 ### 硬件更改
+
 原TI AM5728使用EMIF0接口和EMIF1接口，使用interleaving模式配置2GB的内存，每个EMIF接口连接两个512MB的内存芯片。为降低功耗，平衡性能和成本，现更改为单EMIF接口连接两个256MB的芯片，并且在ECC内存接口增设ECC DDR保证内存运行的可靠性。
 
 |             | EMIF1     | EMIF2     | ECC   |
@@ -27,11 +29,13 @@ categories:
   
 <!-- more -->  
 ### 寄存器详解
+
 根据TRM 15.2.3.5.1.2所述，在系统启动时，需要合理更改DDR的寄存器配置，主要有以下四种：
-* DMM_LISA_MAP_3
-* DMM_LISA_MAP_2
-* DMM_LISA_MAP_1
-* DMM_LISA_MAP_0
+
+- DMM_LISA_MAP_3
+- DMM_LISA_MAP_2
+- DMM_LISA_MAP_1
+- DMM_LISA_MAP_0
   
 参考DMM_LISA_MAP_i的寄存器表格可以重置DDR的启动功能和映射大小。  
 
@@ -41,22 +45,22 @@ categories:
   
 ![](/img/post_pics/ram/pic2.png)
 
-  
 ### U-BOOT配置寄存器
+
 在TI-SDK的U-BOOT源码board/ti/board.c中，以下程序完成了对TI AM5728 EVM的内存配置：  
 
 ```CPP
 static const struct dmm_lisa_map_regs beagle_x15_lisa_regs = {
-	.dmm_lisa_map_3 = 0x80740300,
-	.is_ma_present  = 0x1
+ .dmm_lisa_map_3 = 0x80740300,
+ .is_ma_present  = 0x1
 };
 
 void emif_get_dmm_regs(const struct dmm_lisa_map_regs **dmm_lisa_regs)
 {
-	if (board_is_am571x_idk())
-		*dmm_lisa_regs = &am571x_idk_lisa_regs;
-	else
-		*dmm_lisa_regs = &beagle_x15_lisa_regs;
+ if (board_is_am571x_idk())
+  *dmm_lisa_regs = &am571x_idk_lisa_regs;
+ else
+  *dmm_lisa_regs = &beagle_x15_lisa_regs;
 }
 
 ```
@@ -66,4 +70,5 @@ void emif_get_dmm_regs(const struct dmm_lisa_map_regs **dmm_lisa_regs)
 
 根据硬件配置，我们的内存设置如下：  
 ![](/img/post_pics/ram/pic4.png)
+
 参考：[TI wiki](http://processors.wiki.ti.com/index.php?oldid=127545&title=EZSDK_Memory_Map&keyMatch=MEMORY%20MAP&tisearch=Search-CN-everything)  
