--- a/source/_posts/嵌入式——你需要知道的0x64个问题.md
+++ b/source/_posts/嵌入式——你需要知道的0x64个问题.md
@@ -1,5 +1,5 @@
 ---
-title: 你需要知道的0x64个嵌入式问题
+title: 嵌入式100题
 date: 2020-12-13 23:24:34
 tags: 
     - linux
@@ -415,7 +415,6 @@ C float
 D double
 解析：向上兼容
 
-
 53. 以下代码中for循环的执行次数是（C）
     ```c
     for(x=0,y=0;(y=123)&&(x<4);x++);
@@ -426,14 +425,12 @@ D double
     D 3次
     解析：y=123不是y==123，y=123是赋值永远为真，因此实际仍然是x从0到4的循环
 
-
 54.  在（C）情况下适宜采用 inline 定义内联函数
 A 函数体含有循环语句
 B 函数体含有递归语句
 C 函数代码少、频繁调用
 D 函数代码多，不常调用
 解析：inline是为了减少频繁调用导致入栈出栈的资源消耗。
-
 
 55. 设有如下定义：
     ```c
