--- a/source/_posts/面试——排序.md
+++ b/source/_posts/面试——排序.md
@@ -8,7 +8,7 @@ tags:
 categories: 
     - 面试
 ---
-排序是很重要的一个算法，对于排序的定义，**`排序是按照关键字进行非递减或者非递增的顺序对原序列进行有序排列`**，排序分为`稳定排序`和`非稳定排序`，其中稳定排序是指在排序前两个关键词相同的相对顺序在排序后未发生改变。
+排序是很重要的一个算法，对于排序的定义，排序是按照关键字进行非递减或者非递增的顺序对原序列进行有序排列，排序分为`稳定排序`和`非稳定排序`，其中稳定排序是指在排序前两个关键词相同的相对顺序在排序后未发生改变。
 
 <!-- more -->
 按照内存的消耗区分，排序还分为内排序和外排序，内排的内存都在原序列内存中解决，外排序还需要额外的内存。排序算法这里介绍七种，包括：
