更新分类标签，增加一些文章
Signed-off-by: sjl3110 <2823626197@qq.com>

--- a/source/_posts/嵌入式——AM5728内存配置.md
+++ b/source/_posts/嵌入式——AM5728内存配置.md
@@ -3,8 +3,8 @@ title: AM5728配置DMM_LISA_MAP修改内存工作模式
 date: 2019-11-08 13:30:34
 index_img: /img/post_pics/index_img/am5728_ram.png
 tags: 
-    - linux
-    - ddr
+    - Linux
+    - 内存
 categories: 
     - 嵌入式
 ---
