--- a/source/_posts/嵌入式——编译内核用到的图形界面工具.md
+++ b/source/_posts/嵌入式——编译内核用到的图形界面工具.md
@@ -3,8 +3,8 @@ title: 编译内核用到的图形界面工具
 date: 2019-07-22 17:48:33
 index_img: /img/post_pics/index_img/gconfig.png
 tags:
-    - kernel
-    - linux
+    - Linux
+    - 内核
 categories: 
     - 嵌入式
 ---
