--- a/source/_posts/软件——如何将博客部署到云服务器和个人域名上.md
+++ b/source/_posts/软件——如何将博客部署到云服务器和个人域名上.md
@@ -2,11 +2,10 @@
 title: hexo部署博客并上传到域名上
 date: 2019-06-29 09:07:19
 tags: 
-    - hexo
-    - linux
-    - nginx
+    - Hexo
+    - Linux
 categories: 
-    - 前端
+    - 软件
 ---
 
 文章转载来自[使用 Hexo + Github 搭建自己的博客（图文教程）](https://blog.csdn.net/qq_40147863/article/details/84942914)  
