--- a/source/_posts/面试——计算机网络.md
+++ b/source/_posts/面试——计算机网络.md
@@ -3,9 +3,9 @@ title: 计算机网络
 date: 2020-06-23 12:09:29
 tags: 
     - 计算机网络
-    - linux
+    - Linux
 categories: 
-    - 嵌入式
+    - 面试
 ---
 计算机网络学习笔记。
 <!-- more -->
