--- a/source/_posts/软件——工作环境搭建.md
+++ b/source/_posts/软件——工作环境搭建.md
@@ -1,5 +1,5 @@
 ---
-title: 快速搭建工作环境
+title: 工作环境和工具使用
 date: 2023-08-10 19:11:42
 tags:
     - Linux
@@ -7,10 +7,48 @@ categories:
     - 软件
 ---
 
-包括ssh，zsh和macos等。
+软件开发常用配置。
 
 <!-- more -->
 
+## vscode配置
+
+拼写检查插件：code spell checker
+修改代码长度垂直标尺：editor.rulers
+代码格式化风格：
+```json
+    "C_Cpp.clang_format_fallbackStyle": "{
+        BasedOnStyle: Google,
+        UseTab: Never,
+        IndentWidth: 4,
+        TabWidth: 4,
+        BreakBeforeBraces: Attach,
+        AllowShortIfStatementsOnASingleLine: false,
+        IndentCaseLabels: false,
+        ColumnLimit: 100,
+        AccessModifierOffset: -4,
+        NamespaceIndentation: All,
+        FixNamespaceComments: false
+    }",
+```
+
+关闭git作者和日期提示：
+
+```json
+"gitlens.codeLens.enabled": false, 
+"gitlens.codeLens.authors.enabled": false
+```
+
+TODO highlight关键字:
+```json
+    "todohighlight.keywords": [
+        {
+            "text": "TODO:",
+            "color": "red",
+            "backgroundColor": "yellow",
+        },
+    ]
+```
 ## ssh远程
 
 ```bash
@@ -24,10 +62,39 @@ echo "<pub>" >> .ssh/authorized_keys
 ssh <user-name>@<host-ip>
 ```
 
+修改别名，打开`.ssh/config`
+
+```txt
+Host <Name>
+  HostName <IP>
+  User <User name>
+
+代理跳转：
+
+Host <Name>
+  HostName <跳板机IP>
+  User <跳板机用户>
+  ProxyJump <目标机用户>@<目标机IP>
+```
+
+### Powershell 添加alias
+
+参考[使用powershell的set-alias与function 为ssh设置别名](https://juejin.cn/post/6844903621486723086)
+
+```txt
+function ssh-vega20-ip {
+    ssh shenjianliang@172.21.20.225
+}
+
+set-alias vega20 ssh-vega20-ip
+```
+
 ## zsh
 
-```bash
+<details>
+<summary>zsh安装和主题设置</summary>
 
+```bash
 brew install zsh
 sudo apt-get install zsh
 chsh -s /bin/zsh
@@ -50,11 +117,80 @@ git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:
 
 # 使配置生效
 source ~/.zshrc
+
+# 安装z跳转， 参考 https://cloud.tencent.com/developer/article/1694849
+git clone https://github.com/rupa/z.git
+
+# 遇到窗口大小的问题
+apt-get install xterm
+echo "resize >> /dev/null" >> ~/.zshrc
 ```
+
+</details>
+
+## docker快速使用
+
+```bash
+docker images
+
+docker rmi <images_id>   # 删除镜像
+docker rm <container_id> # 删除容器
+
+docker run -id -w /root --name sjl_docker \
+    -v /path/to/testcase:/testspace -v /opt/rocm:/opt/rocm \
+    -v /etc/localtime:/etc/localtime -v /etc/timezone:/etc/timezone \
+    --privileged \
+    --device=/dev/kfd --device=/dev/dri \
+    --group-add video \                    
+    10.65.42.71:9092/rocm-env:ubuntu-18.04
+
+docker exec -it sjl_docker bash # 进入容器命令行，zsh则进入zsh
+docker commit <container_id>    # 生成镜像
+```
+
+## 建立Samba和Windows访问
+
+```bash
+udo apt-get install samba
+sudo cp /etc/samba/smb.conf /etc/samba/smb.conf.bak
+sudo vim /etc/samba/smb.conf
+ 
+sudo chmod 777 /home/shenjianliang/work
+sudo smbpasswd -a shenjianliang    # 创建密码
+/etc/init.d/smbd restart  # 选择自己的账户名
+```
+
+<details>
+<summary>smb.conf</summary>
+
+```txt
+[global]
+   guest account = shenjianliang
+ 
+security = user
+[public]
+    path = /home/shenjianliang/work
+    public = yes
+    writeable = yes
+    browseable = yes
+    guest ok = yes
+    create mask = 0644
+    acl allow execute always = yes
+```
+
+</details>
+
+打开windows文件管理器右键，添加一个网络位置 `\\<ip>\public`认证即可。
+
+![](/img/post_pics/samba.png)
 
 ## 配置Vim
 
 在～下新建`.vimrc`文件
+
+<details>
+<summary>.vimrc</summary>
+
 ```bash
 " File: .vimrc
 " Author: Jake Zimmerman <jake@zimmerman.io>
@@ -81,7 +217,7 @@ Plugin 'vim-airline/vim-airline-themes'
 " ----- Vim as a programmer's text editor -----------------------------
 Plugin 'scrooloose/nerdtree'
 Plugin 'jistr/vim-nerdtree-tabs'
-Plugin 'vim-syntastic/syntastic'
+" Plugin 'vim-syntastic/syntastic'
 Plugin 'xolox/vim-misc'
 Plugin 'xolox/vim-easytags'
 Plugin 'majutsushi/tagbar'
@@ -226,6 +362,8 @@ augroup END
 " better man page support
 noremap K :SuperMan <cword><CR>
 ```
+
+</details>
 
 下载vim插件管理软件：
 ```bash
